<resources>
    <string name="app_name">Quit Habit! NoSmoking</string>
    <string name="dashboard" translatable="false">Q! NoSmoke</string>
    <string name="target_string">Goal: %s</string>
    <string name="per_total">Per total:</string>
    <string name="remaining_days">Remaining: %s</string>
    <string name="total_money_saved">Total money saved</string>
    <string name="total_savings">This is your total savings: %s</string>
    <string name="total_money_saved_congrats">Your total amount of money</string>
    <string name="progress_activity_get_started">Get started on the life you want</string>
    <string name="maxCounter" translatable="false">maxCounter</string>
    <string name="check_in_str">You will check-in everyday at %d:00</string>
    <string name="error_sum">Please input a sum</string>
    <string name="num_of_cig">Please input a number</string>
    <string name="thanks_for_downloading_this_app">We use this information to show you         some personal statistics such as the amount         of money you\'re saving by giving up     smoking.</string>
    <string name="agreeing_to_terms">By using this app you are agreeing to our</string>
    <string name="rank_master">Current Rank: %s</string>
    <string name="streak_string">Highest days streak: </string>
    <string name="non_smoker_since">Days Smoke Free</string>
    <string name="one_day_smoke_free">One Day Smoke Free</string>
    <string name="check_in_tomorrow">Check-in: tomorrow!</string>
    <string name="check_in">Check-in</string>
    <string name="daily_quote">Today\'s motivation!</string>
    <string name="q_day">Q! Day: </string>
    <string name="cannot_be_zero">Cannot be 0!</string>
    <string name="check_in_now">Check-in now!</string>
    <string name="your_entire_progress">Your entire progress</string>
    <string name="cig_not_smoked">Cigarettes not smoked:</string>
    <string name="cig_press_leaf">Press check-in to calculate</string>
    <string name="life_press_leaf">Press check-in to calculate</string>
    <string name="life_reg">Life regained: </string>
    <string name="explore">Explore</string>
    <string name="your_savings">Your latest savings</string>
    <string name="your_latest_achievments">Your latest achievements</string>
    <string name="personal_progress">Personal progress</string>
    <string name="error_loading_data_from_api">Cannot retrieve data from server</string>
    <string name="energy">Energy levels</string>
    <string name="breath">Proper breathing</string>
    <string name="fatigue">Heart rate</string>
    <string name="gums">Blood circulation</string>
    <string name="how_many_cigarettes_per_day">How many cigarettes per day ?</string>
    <string name="how_much_do_you_spend_per_day">How much do you spend per day ?</string>
    <string name="break_your_habit">Break your habit now!</string>
    <string name="cigarettes">cigarettes</string>
    <string name="example_of_tip_of_the_day">"For Every Reason It\'s Not Possible, There Are Hundreds Of People Who Have Faced The Same Circumstances And Succeeded. – Jack Canfield"</string>
    <string name="per_day">Per day:</string>
    <string name="per_day_simple">per day</string>
    <string name="per_year">Per year:</string>
    <string name="reset_whole_progress">Reset your whole progress</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="OK">OK</string>
    <string name="no_connection">NO INTERNET CONNECTION!</string>
    <string name="error_forty_four">ERROR 404</string>
    <string name="tap_to_start_challenge">Tap to start a challenge!</string>
    <string name="life_r">Life regained:</string>
    <string name="hours">hours</string>
    <string name="welcome_to_quit_habit">WELCOME TO QUIT HABIT!</string>
    <string name="beat_milestone">BEAT YOUR MILESTONE %d DAYS!</string>
    <string name="ok_to_fail">It\'s OK to fail!</string>
    <string name="fail_content">Don\'t waste your life! All you need is a little patience and persistence.</string>
    <string name="awesome">Awesome!</string>
    <string name="we_will_start_tutorial">We will start tutorial now.</string>
    <string name="pass_one">Our strength grows out of our weakness - Ralph Waldo Emerson</string>
    <string name="pass_two">Believe in your potential, and you will be successful - John Maxwell</string>
    <string name="pass_three">Believe you can and you\'re halfway there - Theodore Roosevelt</string>
    <string name="pass_four">The surest way not to fail is to determine to succeed - Richard Brinsley Sheridan</string>
    <string name="pass_five">The secret of getting ahead is getting started - Mark Twain</string>
    <string name="pass_six">It is in your moments of decision that your destiny is shaped - Tony Robbins</string>
    <string name="first_day">Hello, this is your first day! Since you\'re here it means that you made the first step in order to get rid of your habit</string>
    <string name="abstained_last_days">Have you refrain from smoking in the last days ?</string>
    <string name="abstained_today">Have you refrain from smoking today ?</string>
    <string name="how_much_to_save">how much money to save</string>
    <string name="legal">Legal</string>
    <string name="quit_habit_no_smoke_for_android">QuitHabit! NoSmoke  for Android</string>
    <string name="quit_habit_no_smoke_for_android_is_built_using_open_source_software">QuitHabit! NoSmoke for Android is built using  open-source software:</string>
    <string name="privacy_policy"><a href="https://bytao7mao.github.io/quithabit/legal/privacy_policy.html">Privacy Policy</a></string>
    <string name="add_your_today_s_extra_savings">Add your today\'s extra savings!</string>
    <string name="unlimited">Be grateful</string>
    <string name="done">DONE</string>
    <string name="about_your_smoking">About your smoking</string>
    <string name="and">and</string>
    <string name="version_app">Version 0.2 (200)</string>
    <string name="add">add</string>
    <string name="add_money">add extra money</string>
    <string name="get_started">Get Started</string>
    <string name="you_can_do_it">You can do it</string>
    <string name="wolf">Wolf</string>
    <string name="powered_by_q">Powered by Q!</string>
    <string name="cannot_check_in">You cannot check-in right now! Please check back later.</string>
    <string name="please_check_tomorrow">Please check again tomorrow!</string>
    <string name="continue_button">Continue</string>
    <string name="total_savings_top">Total Savings</string>
    <string name="quit_date_change">Current streak: %s days</string>
    <string name="licences"><a href="https://bytao7mao.github.io/quithabit/legal/licences.html">licences</a></string>
    <string name="quit_habit_no_smoke_and_the_quit_habit_logos_are_trademarks"><a href="https://bytao7mao.github.io/quithabit/">Quit Habit! NoSmoke</a> and  the <a href="https://bytao7mao.github.io/quithabit/">Quit Habit! NoSmoke</a>  logos are trademarks of  Marius Nicolae.  All  rights reserved</string>
    <string name="terms_of_service"><a href="https://bytao7mao.github.io/quithabit/legal/terms_and_conditions.html">Terms and Conditions</a></string>
    <string name="progress">progress</string>
    <string name="calculating">Calculating …</string>
    <string name="instead_of_smoking">Craving tips</string>
    <string name="example_instead_of_text">Write a list of things you are grateful for.
        Keep reviewing your list and adding to it every time you have a craving.</string>
    <string name="no_quotes">No quotes available in this moment …</string>
    <string name="craving_text_index_one">You might have tried to quit smoking before and not managed it, but don\'t let that put you off.  Look back at the things your experience has taught you and think about how you\'re really going to do it this time.</string>
    <string name="craving_text_index_two">Make a promise, set a date and stick to it. Sticking to the \"not a drag\" rule can really help. Whenever you find yourself in difficulty, say to yourself, \"I won\'t even have a single drag\", and stick with this until the cravings pass.</string>
    <string name="craving_text_index_three">"Is your after-dinner cigarette your favourite? A US study revealed that some foods, including meat, make cigarettes more satisfying. Others, including cheese, fruit and vegetables, make cigarettes taste terrible. So swap your usual steak or burger for a veggie pizza instead.  "</string>
    <string name="craving_text_index_four">The same US study as above also looked at drinks. Fizzy drinks, alcohol, cola, tea and coffee all make cigarettes taste better.  So when you\'re out, drink more water and juice. Some people find simply changing their drink (for example, switching from wine to a vodka and tomato juice) affects their need to reach for a cigarette.</string>
    <string name="craving_text_index_five">A craving can last 5 minutes. Before you give up, make a list of 5-minute strategies. For example, you could leave the party for a minute, dance or go to the bar.   And think about this: the combination of smoking and drinking raises your risk of mouth cancer by 38 times.</string>
    <string name="craving_text_index_six">"If friends or family members want to give up, too, suggest to them that you give up together. There's also support available from your local stop smoking service. Did you know that you're up to 4 times more likely to quit successfully with their expert help and advice? "</string>
    <string name="craving_text_index_seven">"A review of scientific studies has proved exercise, even a 5-minute walk or stretch, cuts cravings and may help your brain produce anti-craving chemicals."</string>
    <string name="craving_text_index_eight">Nicotine replacement therapy (NRT) can double your chances of success. As well as patches, there are tablets, lozenges, gum and a nasal spray. And if you like holding a cigarette, there are handheld products like the inhalator or e-cigarettes. When you\'re out, try putting your drink in the hand that usually holds a cigarette, or drink from a straw to keep your mouth busy.</string>
    <string name="craving_text_index_nine">Keep reminding yourself why you made the decision to give up. Make a list of the reasons and read it when you need support. Ex-smoker Daniel, 26, says: \"I used to take a picture of my baby daughter with me when I went out. If I was tempted, I\'d look at that.\"  Read more about the stop smoking treatments available on the NHS.</string>
    <string name="craving_text_index_ten">The positive health effects of quitting smoking begin 20 minutes after your last cigarette. Your blood pressure and pulse will start to return to more normal levels. In addition, fibers in the bronchial tubes that previously didn\'t move well due to constant exposure to smoke will start to move again. This is beneficial for the lungs: These fibers help move irritants and bacteria out of the lungs, helping reduce the risk for infection.</string>
    <string name="craving_text_index_eleven">Within eight hours, your carbon monoxide levels will return to a more normal level. Carbon monoxide is a chemical present in cigarette smoke that replaces oxygen particles in the blood, lowering the amount of oxygen your tissues receive. When carbon monoxide goes away, your oxygen levels start to increase to more normal levels. This increased oxygen helps nourish tissues and blood vessels that were getting less oxygen while you were smoking.</string>
    <string name="craving_text_index_twelve">By the one-day mark, you\'ve already decreased your risk of heart attack. This is because of reduced constriction of veins and arteries as well as increased oxygen levels that go to the heart to boost its functioning. Nicotine levels in your bloodstream have also decreased to negligible amounts at this time.</string>
</resources>