<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transitions_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        tools:context=".FirstScreenActivity">
<!--        android:background="@color/white"-->
        <!--style="@style/Widget.AppCompat.EditText"-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:contentDescription="TODO"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/break_your_habit"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
        <TextView
            android:id="@+id/tvSubtitleSmoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about_your_smoking"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_25percent"
            app:layout_constraintStart_toStartOf="@+id/edtTxtLayoutForCiggsId" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTxtLayoutForCiggsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="@style/EditTextCustomTheme"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_25percent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtForCiggarettedId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/how_many_cigarettes_per_day"
                android:textSize="14sp" />
<!--            android:backgroundTint="@color/greenColorLed"-->
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTxtForSavingsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="@style/EditTextCustomTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtLayoutForCiggsId">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorPrimary"
                android:hint="@string/how_much_do_you_spend_per_day"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_round_dark_orange"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/continue_button"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tvThanksId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/thanks_for_downloading_this_app"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtForSavingsId" />
        <TextView
            android:id="@+id/tvAllRightsId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textAlignment="center"
            android:paddingEnd="20dp"
            android:text="@string/agreeing_to_terms"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tvPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorLink="@color/colorPrimary"
                android:text="@string/privacy_policy"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_20percent" />
            <TextView
                android:id="@+id/tvAnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/and"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPolicy"
                app:layout_constraintEnd_toStartOf="@+id/tvTerms"
                app:layout_constraintStart_toEndOf="@+id/tvPolicy" />
            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorPrimary"
                android:text="@string/terms_of_service"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPolicy"
                app:layout_constraintStart_toEndOf="@+id/tvAnd" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_20percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_10percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_25percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_80percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>